# oneline-terminal

./: CMakeLists.txt  main.cc
comport/include/: CComportThread.hpp  CComportThreadLog.hpp  CPortVirtual.hpp  MyPortDefine.hpp
comport/src/: CComportThread.cc
util/include/: ColerdStream.hpp
